tests-integration/tests/roundtrip/invalid/syntax/unexpected_token/03/via-conjure.expected-error.txt
Error running `conjure pretty`: Error:
    tests/roundtrip/invalid/syntax/unexpected_token/03/input.essence:2:56:
  |
2 | find i : int(0..9) such that forAll j : int(0..9) . j <> i
  |                                                        ^
Missing Expression

tests/roundtrip/invalid/syntax/unexpected_token/03/input.essence:2:58:
  |
2 | find i : int(0..9) such that forAll j : int(0..9) . j <> i
  |                                                          ^
Type error:
	Expected: bool
	Got: int

